// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnswerOption render snapshot: renders correct option with feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        Object {
          "correct": true,
          "id": "A",
          "selectedFeedback": "some feedback",
          "title": "Answer 1",
        }
      }
      disabled={false}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <ExpandableTextArea
      error={false}
      errorMessage={null}
      id="answer-A"
      placeholder="Enter an answer"
      setContent={[Function]}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        problemType="multiplechoiceresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger>
      <IconButton
        alt="Toggle feedback"
        iconAs="Icon"
        variant="primary"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with numeric input problem 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        Object {
          "correct": true,
          "id": "A",
          "selectedFeedback": "some feedback",
          "title": "Answer 1",
        }
      }
      disabled={true}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <ExpandableTextArea
      error={false}
      errorMessage={null}
      id="answer-A"
      placeholder="Enter an answer"
      setContent={[Function]}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "some feedback",
            "title": "Answer 1",
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        problemType="numericalresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger>
      <IconButton
        alt="Toggle feedback"
        iconAs="Icon"
        variant="primary"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;

exports[`AnswerOption render snapshot: renders correct option with selected unselected feedback 1`] = `
<Advanced
  className="answer-option d-flex flex-row justify-content-between flex-nowrap pb-2 pt-2"
  onToggle={[Function]}
  open={false}
>
  <div
    className="mr-1 d-flex"
  >
    <Checker
      answer={
        Object {
          "correct": true,
          "id": "A",
          "selectedFeedback": "selected feedback",
          "title": "Answer 1",
          "unselectedFeedback": "unselected feedback",
        }
      }
      disabled={false}
      hasSingleAnswer={false}
      setAnswer={[Function]}
    />
  </div>
  <div
    className="ml-1 flex-grow-1"
  >
    <ExpandableTextArea
      error={false}
      errorMessage={null}
      id="answer-A"
      placeholder="Enter an answer"
      setContent={[Function]}
      value="Answer 1"
    />
    <Body>
      <injectIntl(ShimmedIntlComponent)
        answer={
          Object {
            "correct": true,
            "id": "A",
            "selectedFeedback": "selected feedback",
            "title": "Answer 1",
            "unselectedFeedback": "unselected feedback",
          }
        }
        intl={
          Object {
            "formatMessage": [Function],
          }
        }
        problemType="choiceresponse"
        setSelectedFeedback={[Function]}
        setUnselectedFeedback={[Function]}
      />
    </Body>
  </div>
  <div
    className="d-flex flex-row flex-nowrap"
  >
    <Trigger>
      <IconButton
        alt="Toggle feedback"
        iconAs="Icon"
        variant="primary"
      />
    </Trigger>
    <IconButton
      alt="Delete answer"
      iconAs="Icon"
      onClick={[Function]}
      variant="primary"
    />
  </div>
</Advanced>
`;
